fix: update copy and fix overflow

--- a/components/Articles/Articles.module.scss
+++ b/components/Articles/Articles.module.scss
@@ -160,6 +160,7 @@ pre.pre {
     text-align: left;
     text-wrap: wrap;
     padding: 20px;
+    overflow-x: auto;
   }
 }
 
